# batch_quantize

./: pyproject.toml  requirements.txt
batch_quantize/: __init__.py  batch_quantize.py
